@@ -33,7 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Fix redirecting to task list after completing a task (Bug #14678).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1814,7 +1814,7 @@
    <date>2017-08-01</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Fix redirecting to task list after completing a task (Bug #14678).
    </notes>
   </release>
  </changelog>
