@@ -2,6 +2,7 @@
 v4.2.16-git
 -----------
 
+[jan] Fix redirecting to task list after completing a task (Bug #14678).
 
 
 -------
